* Tracker: add default value support for extrafields (TrivialDev)
* Tracker: CSV export, support lastModifiedDate filtering (TrivialDev)
* Tracker: CSV export, add comments [#853] (Dassault Aviation)
* Tracker: add new customfield: Effort (TrivialDev)
* Tracker: new widget oriented display to replace the old "2 columns" view. (TrivialDev)
* Utils: cross ref document/release. Use [DNNN]/[RNNN] where NNN is the ID of the document/frs release. (TrivialDev)
* Web UI: upgrade splitter jquery plugin to 0.20.0 (TrivialDev)
* Web UI: upgrade jquery ui to 1.12.1 (TrivialDev)
* Web UI: upgrade jquery to 1.12.4 (Nokia)
* Web UI: HTML 5 Doctype; use HTML 5 <header>, <main> and <footer> tags in Funky theme (Nokia)
* Widget MySystasks: new widget for user to display systasks perform on user projects (TrivialDev)
* Widget ProjectlatestArtifact: new widget for project to display the 5 more recent artifacts (TrivialDev)
* Widget ProjectScmStats: new widget for project to display SCM stats (TrivialDev)
* Widget HomeRss: new widget for Forge home page to display RSS flow (TrivialDev)
* Widget HomeLatestFileReleases: new widget for Forge home page to display 5 latest File releases across the forge (TrivialDev)

FusionForge 6.0.5:
* Docman: fix XSS attack (Roland Mas)
* Forum: fix redirection cache [#835] & [#836] (TrivialDev)
* FRS: fix error message on file upload with accent in filename [#838] (TrivialDev)
* Plugin SCM SVN: fix activity when SVN repository is private [#813] (TrivialDev)
* Plugin SCM SVN: fix support old svn clients (Inria)
* Plugin SCM Git: fix activity when Git repository is private [#825] (TrivialDev)
* Plugin MoinMoin: fix httpd permissions & 404 on CentOS [#809] (TrivialDev)
* Project Task: fix CSV import [#823] (Peter Katzmann)
* Project Task: fix CSV import [#823]: add missing translation, add missing category in no header import,
                fix start/end date format description (TrivialDev)
* Tracker: fix artifact deletion with votes [#819] (TrivialDev)