@@ -97,6 +97,8 @@ use_tracker_widget_display = no
 use_docman_review = no
 session_expire = 3600
 use_artefacts_dependencies = no
+;Uncomment the following line to use markdown syntax in tracker
+;tracker_parser_type = 'markdown'
 
 scm_single_host = yes
 system_user=fusionforge
